--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^4.0.0",
-    "toastr": "^2.1.2"
+    "toastr": "^2.1.2",
+    "webpack": "^2.3.1"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
@@ -62,7 +63,6 @@
     "rimraf": ">=2.5.2",
     "style-loader": ">=0.13.1",
     "url-loader": "^0.5.8",
-    "webpack": "^2.3.1",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.17.1"
   },
