--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Basic app with mongo, react, webpack, babel",
   "scripts": {
+    "start": "if [ $NODE_ENV == 'production' ]; then npm run start:prod; else npm run start:dev; fi",
     "start:dev": "npm-run-all --parallel testonly:watch open:src lint:watch",
     "start:prod": "node distserver/tools/srcServer.js",
     "open:src": "babel-node tools/srcServer.js",
@@ -11,8 +12,9 @@
     "test": "npm run lint && npm run testonly",
     "testonly": "mocha --reporter progress tools/testSetup.js \"src/**/*.test.js\"",
     "testonly:watch": "npm run testonly -- --watch",
-    "clean": "rimraf static",
-    "build": "NODE_ENV=production webpack --config webpack.config.babel.js",
+    "build": "npm run clean && npm run build:webpack && npm run build:server",
+    "clean": "rimraf static distServer",
+    "build:webpack": "NODE_ENV='production' webpack --config webpack.config.babel.js",
     "build:server": "babel tools -d distserver/tools --presets es2015 && babel models -d distserver/models && babel routes -d distserver/routes --presets es2015 && babel webpack.config.babel.js webpack.config.dev.js -d distserver && cp index.html distserver"
   },
   "author": "Montana Code School",
